--- a/index.html
+++ b/index.html
@@ -13,12 +13,57 @@
     <link rel="stylesheet" href="style.css">
     <!-- Turf.js -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+      <!-- mapbox geocoder plugin -->
+      <script
+      src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+  <link rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
+      type="text/css">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
 
+
+<!-- Add the control to the map-->
+map.addControl(legend);
     <!-- MAP CONTAINER -->
     <div id='map' class='map'></div>
+
+  <!-- NAVIGATION ELEMENTS -->
+  <div class='map-overlay-search'>
+    <label>Search for location</label>
+    <div id="geocoder" class="geocoder"></div>
+    <button type="button" class="btn btn-primary btn-sm" id="returnbutton">Return to full extent</button>
+</div>
+
+<!-- INTERACTIVITY -->
+<div class='map-overlay-data'>
+    <label>Filter map view</label>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="legendcheck">
+        <label class="form-check-label" for="flexCheckDefault">
+            Legend
+        </label>
+
+    </div>
+
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+            Layer
+        </label>
+    </div>
+
+</div>
+
+   <!-- LEGEND -->
+   <div id='legend' class='legend'>
+    <h4>Collision</h4>
+    <!-- Conents of legend will now be added here -->
+</div>
 
     <script src="script.js"></script>
 
